--- a/src/css/App.css
+++ b/src/css/App.css
@@ -26,7 +26,7 @@ body h1{
 	margin: 70px var(--login-bar-margin);
 }
 
-.login-header {
+.header {
 	color: white;
 	background: var(--theme-color);
 	text-align: center;
@@ -66,7 +66,7 @@ form, .content {
 .btn {
   color: white;
   background: var(--theme-color);
-  margin-top: 40px;
+  margin-top: 30px;
   margin-bottom: 20px !important;
 }
 
