--- a/src/css/Memories.css
+++ b/src/css/Memories.css
@@ -10,7 +10,7 @@
   color: white;
   margin-left: 44%;
   margin-top: -8%;
-  z-index: 10;
+  z-index: 2;
   text-align: center;
   position: relative;
 }
@@ -83,4 +83,32 @@
   position: absolute;
   margin-left: 43%;
   font-size: 30px;
+}
+
+
+
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0, 0.5);
+  z-index: 3;
+}
+.popup_inner {
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  background: white;
+}
+
+.carousel {
+  width: 100%;
 }
