add like icon and dislike icon on card

--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -26,8 +26,21 @@
         cursor: pointer;
     }
 
+        .swipe-card-dislike {
+            width: 55%;
+            right: 0;
+            position: absolute;
+        }
+
+        .swipe-card-like {
+            width: 55%;
+
+            position: absolute;
+        }
+
         .swipe-card-image {
             width: 100%;
+
         }
 
         .swipe-card-info {
@@ -60,4 +73,19 @@
                 -o-user-select: none;
                 user-select: none;
                 }
+
+                    .fade-enter {
+                        opacity: 0.01;
+                    }
+                    .fade-enter-active {
+                        opacity: 1;
+                        transition: opacity 500ms ease-in;
+                    }
+                    .fade-exit {
+                        opacity: 1;
+                    }
+                    .fade-exit-active {
+                        opacity: 0.01;
+                        transition: opacity 500ms ease-in;
+                    }
 
