--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,7 +2,7 @@
 :root {
   /* --theme-color: #166643; */
   /* --theme-color: #5F9EA0; */
-  --theme-color: #9900cc;
+  --theme-color: #166643;
   --navbar-color: #EEFCCE;
   --login-bar-width: 500px;
   --login-bar-margin: 325px;
