--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,7 @@
   --theme-color: #166643;
   --navbar-color: #EEFCCE;
   --login-bar-width: 500px;
-  --login-bar-margin: 325px;
+  --login-bar-margin: 15%;
 }
 
 body {
@@ -22,6 +22,7 @@ footer{
 	text-align: center;
 	height:60px;
 	background:#f4f4f4;
+  margin-top:50px;
 	padding-top:15px;
 }
 
@@ -33,12 +34,13 @@ footer{
 /* login */
 .welcome-msg{
 	margin-top: 100px;
+  margin-bottom: 100px;
 	font-size: 36px;
 }
 
 .login-bar {
   width: var(--login-bar-width);
-	margin: 70px var(--login-bar-margin);
+	margin: auto;
 }
 
 .header {
@@ -88,7 +90,8 @@ form, .content {
 /* settings */
 .settings-bar {
   width: var(--login-bar-width);
-	margin: 150px var(--login-bar-margin);
+  margin: auto;
+  margin-top: 150px;
 }
 
 * {
