--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -1,9 +1,10 @@
 .swipe {
-  position: fixed;
+  /*position: fixed;*/
   padding: 100px 20px;
   height: 100%;
   box-sizing: border-box;
 }
+
 
 .swipe-card {
   width: 50vh;
@@ -13,7 +14,7 @@
   border-radius: 20px;
   overflow: hidden;
   position: fixed;
-  left: 50%;
+  /*left: 50%;*/
 
   box-shadow: 0 3px 12px 3px rgba(0,0,0,0.2);
   background-color: white;
