--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -71,8 +71,17 @@
   background-color: white;
 }
 
+
 .swipe-card:hover {
   cursor: pointer;
+}
+
+.swipe-no-cards {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 40vh;
+    transform: translate(-50%, -50%);
 }
 
   .swipe-card-dislike {
