--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,7 +4,7 @@
     padding-top: 80px;
     /* background: url('../../img/background35.jpg') no-repeat center center fixed; */
     background-size: 100%;
-    background: linear-gradient(to bottom right, 	#FCF9E9, #E6D273);
+    background: linear-gradient(to bottom right, 	#FCF9E9, #FCEF90);
 }
 
     .home-noteboard-section {
