added old-home route, fixed create-family tabs, added email login

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -55,8 +55,8 @@ body h1{
 
 footer{
 	text-align: center;
-	height:50px;
-	background:#f4f4f4;
+	height:70px;
+	background:#f1f1f1;
 	padding-top:20px;
 }
 
@@ -98,14 +98,11 @@ footer{
 	color: white;
 	background: var(--theme-color);
 	text-align: center;
-	border: 1px solid var(--theme-color);
-	border-bottom: none;
-	border-radius: 10px 10px 0px 0px;
   padding: 20px 0 20px 0;
 }
 
 form, .content {
-  border: 1px solid #B0C4DE;
+  border: 1px solid #FFFFFF;
   background: white;
   border-radius: 0px 0px 10px 10px;
 	text-align: center;
@@ -143,6 +140,7 @@ form, .content {
   width: var(--login-bar-width);
   margin: auto;
   margin-top: 150px;
+  margin-bottom: 50px;
 }
 
 * {
@@ -153,4 +151,14 @@ form, .content {
         -ms-user-select: text; /* Internet Explorer/Edge */
             user-select: text; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+.family-header {
+	background: var(--theme-color);
+	text-align: center;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.family-tab:hover {
+  background:green !important;
 }
