--- a/src/components/Home2/Home.css
+++ b/src/components/Home2/Home.css
@@ -1,22 +1,38 @@
 
 
-.home {
-    padding-top: 80px;
+.home2 {
+    height: 60vw;
+    box-sizing: border-box;
     /* background: url('../../img/background35.jpg') no-repeat center center fixed; */
     background-size: 100%;
     background: linear-gradient(to bottom right, 	#FCF9E9, #FCEF90);
 }
 
-    .home-noteboard-section {
+    .home2-title {
+        position: absolute;
+        display: block;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 10vw;
+        font-size: 3vw;
+        text-align: center;
+    }
+
+    .home2-noteboard-section {
             box-sizing: border-box;
-            padding: 3vw;
-            width: 33%;
-            height: 53vw;
+
+            padding: 4vw;
+            height: 45vw;
+            width: 30vw;
             float: left;
         }
 
-            .noteboard {
-                height: 100%;
+            .noteboard2 {
+                position: absolute;
+                left: 5%;
+                top: 10vw;
+                height: 31.9vw;
+                width: 20vw;
                 padding: 10px;
                 border-radius: 20px;
                 box-shadow: 0 6px 12px 2px rgba(0,0,0,0.2);
@@ -24,48 +40,48 @@
                 flex-direction: column;
                 transition: transform ease-in-out 0.2s;
                 transform: translate(0,2%) scale(1.035);
-                background-color: rgb(233, 232, 211, 0.9);
+                background-color: rgba(233, 232, 211, 0.9);
             }
 
-            .noteboard:hover {
+            .noteboard2:hover {
                 cursor: pointer;
                 transform: translate(0,2%) scale(1.07);
             }
-                .noteboard-title {
+                .noteboard2-title {
                     margin-left: 10px;
                     margin-top: 10px;
                     margin-bottom: 5px;
                     text-align: left;
-                    font-size: 1.5vw;
+                    font-size: 1.2vw;
                 }
 
-                    .noteboard-button-icon {
+                    .noteboard2-button-icon {
                         float: right;
                         margin-right: 20px;
                         background-color: transparent;
-                        height: 3vh;
-                        width: 3vh;
-                        border-radius: 1.5vh;
+                        height: 2vh;
+                        width: 2vh;
+                        border-radius: 1vh;
                         font-size: auto;
                         overflow: hidden;
                         font-weight: normal;
                         text-align: center;
-                        font-size: 2vh;
+                        font-size: 1vh;
                         padding: 0;
                         outline:0;
                     }
 
-                    .noteboard-button-plus {
+                    .noteboard2-button-plus {
                         border: 1px solid rgb(29, 142, 238);
                         color: rgb(29, 142, 238);
                     }
 
-                    .noteboard-button-minus {
+                    .noteboard2-button-minus {
                         border: 1px solid red;
                         color: red;
                     }
 
-                .noteboard-tutorial {
+                .noteboard2-tutorial {
                     font-size: 17px;
                     display: block;
                     box-sizing: border-box;
@@ -75,7 +91,7 @@
                 }
 
 
-                .noteboard-notes {
+                .noteboard2-notes {
                     width: 100%;
                     flex: 1;
                     overflow-y: scroll;
@@ -83,18 +99,19 @@
                     list-style: none;
                     overflow-x: hidden;
 
+
                 }
 
-                    .noteboard-note {
+                    .noteboard2-note {
                         transition: transform ease-in-out 0.15s
                     }
-                    .noteboard-delete {
+                    .noteboard2-delete {
                         transform: translateX(50px);
                     }
-                    .noteboard-normal {
+                    .noteboard2-normal {
                         transform: translateX(0px);
                     }
-                        .noteboard-text {
+                        .noteboard2-text {
                             color: rgb(29, 76, 119);
                             width: 100%;
                             overflow: visible;
@@ -107,10 +124,10 @@
                             box-shadow: 0 0px 0px 0px rgba(0,0,0,0.2);
                             border: 1px solid rgb(168, 206, 241);
                             outline: 0;
-                            font-size: 1.2vw;
+                            font-size: 0.8vw;
                             transition: border ease-in-out 0.2s, box-shadow ease-in-out 0.1s, transform ease-in-out 0.15s;
                         }
-                        .noteboard-passage {
+                        .noteboard2-passage {
                             color: black;
                             width: 100%;
                             overflow: visible;
@@ -123,23 +140,23 @@
                             border-radius: 10px;
                             box-shadow: 0 3px 12px 0px rgba(0,0,0,0.2);
                             outline: 0;
-                            font-size: 1.2vw;
+                            font-size: 0.8vw;
                             transition: border ease-in-out 0.2s, box-shadow ease-in-out 0.1s, transform ease-in-out 0.15s;
                         }
 
 
-                        .noteboard-delete-icon {
+                        .noteboard2-delete-icon {
                             position: relative;
                             height: 30px;
                             transform: translate(-50px, 17px);
                         }
 
-                    .noteboard-button {
+                    .noteboard2-button {
                         width: 100%;
                         overflow-x: hidden;
                         white-space: nowrap;
                     }
-                        .noteboard-remove {
+                        .noteboard2-remove {
                             border: 0;
                             box-sizing: border-box;
                             width: 40%;
@@ -152,7 +169,7 @@
                             transition: width ease-in-out 0.1s;
                         }
 
-                        .notenoard-submit-img-section {
+                        .noteboard2-submit-img-section {
                             height: 20px;
                             width: 20px;
                             border-radius: 10px;
@@ -166,12 +183,12 @@
 
 
 
-                            .notenoard-submit-img {
+                            .noteboard2-submit-img {
                                 position: absolute;
                                 height: 100%;
                                 width: 100%;
                             }
-                        .noteboard-submit {
+                        .noteboard2-submit {
                             border: 0;
                             width: 70%;
                             height: 40px;
@@ -184,19 +201,25 @@
                             outline:0;
                         }
 
-    .home-top {
-        width: 67%;
+    .home2-top {
+        width: 70vw;
+        height: 70vw;
         float: left;
-        padding: 3vw;
+        padding: 6vw;
 
     }
 
-        .home-photo-section {
-            width: 100%;
+        .home2-photo-section {
+            top: 20vw;
+            left: 50%;
+            transform: translate(-50%, 0);
+            width: 40vw;
+            position: absolute;
             box-sizing: border-box;
         }
 
-            .home-photo {
+            .home2-photo {
+                background-color: rgba(255,255,255,0.9);
                 box-sizing: border-box;
                 padding: 1%;
                 box-shadow: 0 3px 12px 3px rgba(0,0,0,0.2);
@@ -204,45 +227,50 @@
                 transition: transform ease-in-out 0.1s;
             }
 
-            .home-photo:hover {
+            .home2-photo:hover {
                 cursor: pointer;
                 /* transform: scale(1.05); */
             }
-                .home-photo-img {
+                .home2-photo-img {
                     width: 100%;
                     border-radius: 20px;
                 }
 
 
-    .cards {
-        padding: 2%;
+    .cards2 {
+        position: absolute;
+        width: 20vw;
+        top: 10vw;
+        left: 72.5vw;
         margin: 0 auto;
-        width: fit-content;
         box-sizing: border-box;
         list-style: none;
     }
 
-        .cards-card {
-            padding: 10px;
-            width: 17vw;
-            height: 17vw;
-            margin-top: 0;
-            float: left;
+        .cards2-card {
+            width: 15vw;
+            height: 15vw;
+
+            margin-bottom: 3vw;
+            float: right;
+
         }
 
 
-            .card-link {
+            .card2-link {
                 width: 100%;
                 height: 100%;
                 display: block;
             }
 
-            .card-link:hover {
+            .card2-link:hover {
                 cursor: pointer;
                 text-decoration: none;
             }
 
-                .card {
+                .card2 {
+                    opacity: 0.9;
+                    background-image: linear-gradient(45deg, rgb(255,247,210) 0%, rgb(255,247,210) 100%);
                     height: 100%;
                     width: 100%;
                     padding: 1.5vw;
@@ -254,16 +282,16 @@
                     box-sizing: border-box;
                 }
 
-                .card:hover {
+                .card2:hover {
                     transform: scale(1.03);
                 }
 
-                    .card-name {
+                    .card2-name {
                         font-size: 2vw;
                         color: #555555;
-                        transform: translateY(-4vw);
+                        transform: translateY(-3vw);
                     }
-                    .card-img {
+                    .card2-img {
                         margin-top: 6vw;
                         transform: translateY(-3.5vw);
                         width: 40%;
@@ -272,43 +300,20 @@
 /*** smart phone ****/
 @media screen and (max-width: 650px) {
 
-
-    /* .home-noteboard-section {
-        width: 100%;
-        height: 120vw;
-    }
-
-        .noteboard-title {
-            font-size: 4vw;
-        }
-
-
-
-        .noteboard-submit {
-            height: 50px;
-        }
-
-    .cards-card {
-        width: 100%;
-        height: 120vw;
-        margin-left: 0;
-        margin-top: 10%;
-    } */
-
-    .home-top{
+    .home2-top{
         width: 100%;
     }
-    .home-noteboard-section {
+    .home2-noteboard-section {
         width: 100%;
         height: 100vw;
     }
 
 
-        .noteboard-text {
+        .noteboard2-text {
             font-size: 2vw;
         }
 
-        .noteboard-passage {
+        .noteboard2-passage {
             font-size: 2vw;
         }
 
@@ -317,7 +322,7 @@
 /*** large desktop ****/
 @media screen and (min-width: 1000px) {
 
-    /* .home-noteboard-section {
+    /* .home2-noteboard-section {
         height: 40vw;
         width: 30%;
         float: left;
